# parametric_tsne

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
example/: README.md  example_viz_parametric_tSNE.py
examples/: example_viz_parametric_tSNE.py
parametric_tSNE/: __init__.py  core.py  utils.py
